# sj_project

./: .env.example  .gitignore  Dockerfile  celerybeat-schedule.db  docker-compose.yml  pyproject.toml
api/media/photo/: inst
src/: __init__.py
src/apps/patient/: .tasks.py.swo  admin.py  apps.py  models.py  serializers.py  service.py  tasks.py  views.py
src/apps/patient/migrations/: 0001_initial.py  0002_delete_anamnesislife.py  0003_initial.py  0004_remove_patient_anamnesis_life_anamnesislife_patient.py  0005_category_typeintoxication_patient_avatar_and_more.py  0006_typepalimpsests_typetolerance_and_more.py  0007_remove_anamnesisdisease_patient_and_more.py  0008_remove_patientinfo_in_hospital_patient_in_hospital.py  0009_patientinfo_price.py  0010_psychologicalconsultation_diary.py  0011_photo.py  0012_alter_photo_file.py  0013_epicrisis.py  0014_photo_user_alter_epicrisis_treatment_results.py  0015_alter_epicrisis_treatment_results.py  0016_alter_epicrisis_treatment_results.py  0017_patient_updated_at.py  0018_alter_patientinfo_patient.py  0019_remove_anamnesisdisease_category_and_more.py  0020_delete_category_delete_typeintoxication_and_more.py  0021_alter_patient_avatar.py  0022_alter_patient_avatar.py  0023_alter_patient_avatar.py  0024_alter_photo_file.py  0025_alter_anamnesisdisease_last_treatment_and_more.py  0026_alter_neurologicalstatus_dysarthria_and_more.py  (+1 more)
src/apps/user/: admin.py  managers.py  models.py  serializers.py  views.py
src/config/: celery.py  settings.py
src/routers/: main_router.py  urls.py  yasg_router.py
(+13 files in other folders)
